--- a/404.html
+++ b/404.html
@@ -54,7 +54,12 @@
    
   <meta property="og:description" content="
   Whoops, this page doesn't exist.
-  Move along. (404 error)
+
+  
+  
+  
+  
+  
   
 
   
@@ -87,7 +92,12 @@
   
   <meta name="twitter:description" content="
   Whoops, this page doesn't exist.
-  Move along. (404 error)
+
+  
+  
+  
+  
+  
   
 
   
@@ -212,10 +222,15 @@
 <div role="main" class="container">
   <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+<!--   <h1>Move along. (404 error)</h1> -->
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
   <br/>
 
-  <img src="/img/404-southpark.jpg" />
+  <!-- <img src="/img/404-southpark.jpg" /> -->
 </div>
 
 </div>
