--- a/Complement_probabilites_statistique/variables-aleatoires-continues.html
+++ b/Complement_probabilites_statistique/variables-aleatoires-continues.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-09-10" />
+<meta name="date" content="2019-09-11" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -103,6 +103,9 @@
 <li><a href="lois-usuelles-discretes.html#loi-de-poisson-mathcalplambda">Loi de Poisson <span class="math inline">\(\mathcal{P}(\lambda)\)</span></a></li>
 <li class="chapter" data-level="" data-path="lois-usuelles-discretes.html"><a href="lois-usuelles-discretes.html#approximation-dune-loi-binomiale"><i class="fa fa-check"></i>Approximation d’une loi binomiale</a></li>
 <li><a href="lois-usuelles-discretes.html#loi-geometrique-ou-de-pascal-mathcalgp">Loi Géométrique ou de Pascal <span class="math inline">\(\mathcal{G}(p)\)</span></a></li>
+<li><a href="lois-usuelles-discretes.html#loi-binomiale-negative-mathcalbnrp">Loi Binomiale Négative <span class="math inline">\(\mathcal{BN}(r,p)\)</span></a><ul>
+<li><a href="lois-usuelles-discretes.html#mathcalgpmathcalbn1p"><span class="math inline">\(\mathcal{G}(p)=\mathcal{BN}(1,p)\)</span></a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html"><i class="fa fa-check"></i>Feuille d’exercices 1</a><ul>
 <li class="chapter" data-level="" data-path="feuille-dexercices-1.html"><a href="feuille-dexercices-1.html#combinatoire"><i class="fa fa-check"></i>Combinatoire</a></li>
