--- a/Statinf/estimation-ponctuelle.html
+++ b/Statinf/estimation-ponctuelle.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-10-04" />
+<meta name="date" content="2019-10-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -188,15 +188,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="part"><span><b>Statistique Inférentielle</b></span></li>
 <li class="chapter" data-level="2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html"><i class="fa fa-check"></i><b>2</b> Échantillonnage et Théorèmes limites</a><ul>
 <li class="chapter" data-level="2.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillonnage"><i class="fa fa-check"></i><b>2.1</b> Échantillonnage</a></li>
-<li class="chapter" data-level="2.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoremes-limites"><i class="fa fa-check"></i><b>2.2</b> Théorèmes limites</a><ul>
-<li class="chapter" data-level="2.2.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-1"><i class="fa fa-check"></i><b>2.2.1</b> Introduction</a></li>
-<li class="chapter" data-level="2.2.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-faible-des-grands-nombres"><i class="fa fa-check"></i><b>2.2.2</b> Loi faible des grands nombres</a></li>
-<li class="chapter" data-level="2.2.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-forte-des-grands-nombres"><i class="fa fa-check"></i><b>2.2.3</b> Loi forte des grands nombres</a></li>
-<li class="chapter" data-level="2.2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoreme-central-limite"><i class="fa fa-check"></i><b>2.2.4</b> Théorème central limite</a></li>
+<li class="chapter" data-level="2.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#la-statistique-overlinex_n"><i class="fa fa-check"></i><b>2.2</b> La statistique <span class="math inline">\(\overline{X}_n\)</span></a></li>
+<li class="chapter" data-level="2.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoremes-limites"><i class="fa fa-check"></i><b>2.3</b> Théorèmes limites</a><ul>
+<li class="chapter" data-level="2.3.1" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-faible-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.1</b> Loi faible des grands nombres</a></li>
+<li class="chapter" data-level="2.3.2" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-forte-des-grands-nombres"><i class="fa fa-check"></i><b>2.3.2</b> Loi forte des grands nombres</a></li>
+<li class="chapter" data-level="2.3.3" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#theoreme-central-limite"><i class="fa fa-check"></i><b>2.3.3</b> Théorème central limite</a></li>
 </ul></li>
+<li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
+<li class="chapter" data-level="2.5" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#etude-de-la-statistique-s2"><i class="fa fa-check"></i><b>2.5</b> Etude de la statistique <span class="math inline">\(S^2\)</span></a></li>
+<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillons-gaussiens"><i class="fa fa-check"></i><b>2.6</b> Echantillons Gaussiens</a></li>
+<li class="chapter" data-level="2.7" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.7</b> Introduction à l’estimation ?</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html"><i class="fa fa-check"></i><b>3</b> Estimation ponctuelle</a><ul>
-<li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-2"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
+<li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-1"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
 <li class="chapter" data-level="3.2" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#methodes-destimation"><i class="fa fa-check"></i><b>3.2</b> Méthodes d’estimation</a></li>
 <li class="chapter" data-level="3.3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#la-methode-des-moments"><i class="fa fa-check"></i><b>3.3</b> La méthode des moments</a><ul>
 <li class="chapter" data-level="3.3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#lestimateur-des-moments-emm"><i class="fa fa-check"></i><b>3.3.1</b> L’estimateur des moments (EMM)</a></li>
@@ -308,12 +312,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
             <section class="normal" id="section-">
 <div class = rmdreview>
-Vos retours sur le contenu de ce cours sont appréciés. Pour ajouter des annotations, <span style="background-color: #3297FD; color: white">choisissez le text</span> que vous voulez commenter et cliquez sur <i class="h-icon-annotate"></i>. Pour accéder aux annotations crées par d'autres personnes, cliquez <i class="h-icon-chevron-left"></i> sur le coin supérieur de la page <i class="fa fa-arrow-circle-right  fa-rotate-315" aria-hidden="true"></i>.
-Les annotations peuvent être des corrections typographiques, des propositions ou des questions.
+Vous êtes invités à annoter le contenu de ce cours. Les annotations peuvent être des corrections typographiques, des propositions ou des questions. Pour ajouter des annotations, <span style="background-color: #3297FD; color: white">choisissez le text</span> que vous voulez commenter et cliquez sur <i class="h-icon-annotate"></i>. Pour accéder aux annotations crées par d'autres personnes, cliquez <i class="h-icon-chevron-left"></i> sur le coin supérieur de la page <i class="fa fa-arrow-circle-right  fa-rotate-315" aria-hidden="true"></i>.
 </div>
 <div id="estimation-ponctuelle" class="section level1">
 <h1><span class="header-section-number">Chapitre 3</span> Estimation ponctuelle</h1>
-<div id="introduction-2" class="section level2">
+<div id="introduction-1" class="section level2">
 <h2><span class="header-section-number">3.1</span> Introduction</h2>
 <p>Dans ce chapitre, on suppose que les données <span class="math inline">\(x_1,\ldots,x_n\)</span> sont <span class="math inline">\(n\)</span> réalisations indépendantes d’une même variable aléatoire sous-jacente <span class="math inline">\(X\)</span>. Il est équivalent de supposer que <span class="math inline">\(x_1,\ldots,x_n\)</span> sont les réalisations de variables aléatoires <span class="math inline">\(X_1,\ldots,X_n\)</span> indépendantes et de même loi. Nous adopterons ici la seconde formulation, qui est plus pratique à manipuler.</p>
 <p>Les techniques de statistique descriptive, comme l’histogramme ou le graphe de probabilités, permettent de faire des hypothèses sur la nature de la loi de probabilité des <span class="math inline">\(X_i\)</span>. Des techniques statistiques plus sophistiquées, les tests d’adéquation, permettent de valider ou pas ces hypothèses.</p>
